<?xml version="1.0"?>
<package>
    <name>rpd_pddl_examples</name>
    <version>1.0.0</version>
    <description>
        A place to store lots of pddl domains which are interfaced to rosplan
        and serve to debug/test the system
    </description>

    <license>GPLv3</license>

    <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
    <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

</package>
