<?xml version="1.0"?>
<package>

    <name>rpd_turtlebot_demo</name>
    <version>1.0.0</version>
    <description>
        Launch files and documentation about rosplan turtlebot kenny demo
    </description>

    <license>GPLv3</license>

    <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
    <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

</package>
